feat: update page title and description to Russian
- Update page title to Russian
- Update meta description to Russian
- Update manifest.json app name to Russian

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "INNOPROG IDE",
+  "name": "INNOPROG IDE - Онлайн редактор кода",
   "icons": [
     {
       "src": "favicon.ico",
