feat: add code folding functionality
- Add foldGutter extension to display fold buttons next to line numbers
- Add foldKeymap for keyboard shortcuts (Ctrl-Shift-[, Ctrl-Shift-], etc.)
- Support folding for functions, classes, loops, and other code blocks
- Works with all supported languages (JS, Python, C++, Java, SQL, Dart)
- Users can click fold buttons or use keyboard shortcuts to collapse/expand code blocks

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/commands": "^6.8.1",
+    "@codemirror/fold": "^0.19.4",
     "@codemirror/lang-cpp": "^6.0.2",
     "@codemirror/lang-java": "^6.0.2",
     "@codemirror/lang-javascript": "^6.2.2",
